--- a/index.html
+++ b/index.html
@@ -220,7 +220,8 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Queerolina</h3>
                             <div class="subheading mb-3">Exhibit curation | Project management | Project development</div>
-                            <p>Stewarded this exhibit from the proposal, to planning, to development, to phase one completion. Combined archival principles and best practices, humanities theories and praxis, and digital humanities tools to create an interactive exhibit with ArcGIS StoryMaps and Omeka Classic.</p>
+                            <p>Explore the <a href="https://exhibits.lib.unc.edu/exhibits/show/queerolina/welcome" target="_blank" rel="noopener noreferrer">Queerolina Omeka Classic exhibit and ArcGIS Story Map here</a>.</p>
+							<p>Stewarded this exhibit from the proposal, to planning, to development, to phase one completion. Combined archival principles and best practices, humanities theories and praxis, and digital humanities tools to create an interactive exhibit with ArcGIS StoryMaps and Omeka Classic.</p>
 							<p> Read more about Cassie's standpoint in relation to her involvement with developing the "Queerolina" exhibit below.</p>
 							<embed src="https://drive.google.com/file/d/1aIkSFutvJNz0OwYiz0AK9Cpfqqjdp2A_/preview?usp=sharing" type="application/pdf" width="75%" height="300px" />
 							<p> View the Queerolina map below </p>
