--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Apartheid Heritage(s)</h3>
                             <div class="subheading mb-3">Research Assistant | Exhibit Development | Archivist | Project Management </div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
-                        </div>
+                            <p>Read about her work<a href="https://apartheidheritages.org/guest-post-by-cassie-tanks-msls-22-research-assistant-you-belong-in-dh-my-myspace-tech-skills/" target="_blank" rel="noopener noreferrer">with Apartheid Heritage(s) </a>.</p>
+							</div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2019 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
